add the animate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -38,7 +37,9 @@
     </div>
 
     <div id="login">
-        <h2>网站登录<input type="button" class="close" value="关闭"></h2>
+        <h2>网站登录
+            <input type="button" class="close" value="关闭">
+        </h2>
         <div class="user">
             账号：
             <input type="text" name="user" class="text" />
@@ -53,7 +54,21 @@
         <div class="other">注册新用户|忘记密码？</div>
     </div>
 
-    <div id= "screen"></div>
+    <div id="share">
+        <h2>分享到</h2>
+        <ul>
+           <li><a href="" class= "share_logo">一键分享</a></li>
+           <li><a href="" class= "share_logo">微信分享</a></li>
+           <li><a href="" class= "share_logo">QQ分享</a></li>
+           <li><a href="" class= "share_logo">知乎分享</a></li>
+           <li><a href="" class= "share_logo">空间分享</a></li>
+           <li><a href="" class= "share_logo">淘宝分享</a></li>
+        </ul>
+        <div class = "share_footer"><a href="###">百度分享</a><span></span></div>
+    </div>
+
+
+    <div id="screen"></div>
 
 </body>
 
