--- a/index.html
+++ b/index.html
@@ -54,17 +54,58 @@
         <div class="other">注册新用户|忘记密码？</div>
     </div>
 
+    <div id="nav">
+        <ul class="about">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ul class="black">
+            <li>首页</li>
+            <li>博文列表</li>
+            <li>动感音乐</li>
+            <li>精彩相册</li>
+            <li>关于我</li>
+        </ul>
+        <div class="nav_bg">
+          <ul class="white">
+                <li>首页</li>
+                <li>博文列表</li>
+                <li>动感音乐</li>
+                <li>精彩相册</li>
+                <li>关于我</li>
+          </ul>
+        </div>
+    </div>
+
     <div id="share">
         <h2>分享到</h2>
         <ul>
-           <li><a href="" class= "share_logo">一键分享</a></li>
-           <li><a href="" class= "share_logo">微信分享</a></li>
-           <li><a href="" class= "share_logo">QQ分享</a></li>
-           <li><a href="" class= "share_logo">知乎分享</a></li>
-           <li><a href="" class= "share_logo">空间分享</a></li>
-           <li><a href="" class= "share_logo">淘宝分享</a></li>
+            <li>
+                <a href="" class="share_logo">一键分享</a>
+            </li>
+            <li>
+                <a href="" class="share_logo">微信分享</a>
+            </li>
+            <li>
+                <a href="" class="share_logo">QQ分享</a>
+            </li>
+            <li>
+                <a href="" class="share_logo">知乎分享</a>
+            </li>
+            <li>
+                <a href="" class="share_logo">空间分享</a>
+            </li>
+            <li>
+                <a href="" class="share_logo">淘宝分享</a>
+            </li>
         </ul>
-        <div class = "share_footer"><a href="###">百度分享</a><span></span></div>
+        <div class="share_footer">
+            <a href="###">百度分享</a>
+            <span></span>
+        </div>
     </div>
 
 
