add register form

--- a/index.html
+++ b/index.html
@@ -33,7 +33,70 @@
                 </li>
             </ul>
         </div>
+        <div class="reg">注册</div>
         <div class="login">登录</div>
+    </div>
+
+    <div id="reg">
+        <h2>会员注册
+            <input type="button" class="close" value="关闭">
+        </h2>
+        <dl>
+            <dd>
+                用户名:
+                <input type="text" name="user" class="text" />
+            </dd>
+            <dd>
+                密 码:
+                <input type="password" name="password" class="text" />
+            </dd>
+            <dd>
+                确认密码:
+                <input type="password" name="config_password" class="text" />
+            </dd>
+            <dd>
+                提 问:
+                <select name="ques">
+                    <option value="0">-----------请选择-------</option>
+                    <option value="1">-----------喜欢的歌------</option>
+                    <option value="2">-----------喜欢的菜------</option>
+                    <option value="3">-----------喜欢的游戏-----</option>
+                </select>
+            </dd>
+            <dd>
+                回 答:
+                <input type="text" name="ans" class="text" />
+            </dd>
+            <dd>
+                电子邮件:
+                <input type="text" name="mail" class="text" />
+            </dd>
+            <dd class="birthday">
+                生日:
+                <select name="day">
+                    <option value="0">请选择日</option>
+                </select>
+                <select name="month">
+                    <option value="0">请选择月</option>
+                </select>
+                <select name="year">
+                    <option value="0">请选择年</option>
+                </select>
+
+            </dd>
+            <dd style="height: 105px;">
+                备注:
+                <textarea name="ps"></textarea>
+            </dd>
+            <dd style="padding:0 0 0 320px;">
+                还可以输入200字
+            </dd>
+            <dd style="padding:0 0 0 100px;">
+                <input type="button" class="submit" value="提交" />
+            </dd>
+        </dl>
+
+
     </div>
 
     <div id="login">
@@ -70,13 +133,104 @@
             <li>关于我</li>
         </ul>
         <div class="nav_bg">
-          <ul class="white">
+            <ul class="white">
                 <li>首页</li>
                 <li>博文列表</li>
                 <li>动感音乐</li>
                 <li>精彩相册</li>
                 <li>关于我</li>
-          </ul>
+            </ul>
+        </div>
+    </div>
+
+    <div id="main">
+        <div id="sidebar">
+            <h2>旅行博文</h2>
+            <ul>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+            </ul>
+
+            <h2>阅读博文</h2>
+            <ul>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+            </ul>
+
+            <h2>科技博文</h2>
+            <ul>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+                <li>
+                    <a href="##">去西藏</a>
+                </li>
+            </ul>
+        </div>
+        <div id="index">
+            index
         </div>
     </div>
 
