--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
         <div id="index">
             index
         </div>
+        <div id = "banner">
+            <img src="images/gold.PNG" alt="轮播器第1张"/>
+            <img src="images/pot.PNG" alt="轮播器第2张"/>
+            <ul>
+                <li>●</li>
+                <li>●</li>
+            </ul>
+            <span></span>
+            <strong></strong>
+        </div>
     </div>
 
     <div id="share">
