add lazy load image

--- a/index.html
+++ b/index.html
@@ -282,6 +282,24 @@
             <span></span>
             <strong></strong>
         </div>
+        <div id = "photo">
+             <dl>
+                 <dt><img class= "wait_load" bigsrc="images/photo_big.jpg" xsrc="images/photo.jpg" src="images/header_bg.png" alt="" /></dt>
+                 <dd>延迟加载图片</dd>
+             </dl>
+             <dl>
+                <dt><img class= "wait_load" bigsrc="images/universe_big.jpg" xsrc="images/universe.jpg" src="images/header_bg.png" alt="" /></dt>
+                <dd>延迟加载图片</dd>
+            </dl>
+             <dl>
+                <dt><img class= "wait_load" bigsrc="images/photo_big.jpg" xsrc="images/photo.jpg" src="images/header_bg.png" alt="" /></dt>
+                <dd>延迟加载图片</dd>
+            </dl>
+            <dl>
+                <dt><img class= "wait_load" bigsrc="images/universe_big.jpg" xsrc="images/universe.jpg" src="images/header_bg.png" alt="" /></dt>
+                <dd>延迟加载图片</dd>
+            </dl>
+        </div>
     </div>
 
     <div id="share">
@@ -312,6 +330,19 @@
         </div>
     </div>
 
+    <div id="photo_big">
+        <h2>图片预加载
+            <input type="button" class="close" value="关闭">
+        </h2>
+        <div class ="big">
+            <img src="images/loading.gif"  alt=""/>
+            <strong class ="sl">&lt;</strong>
+            <strong class ="sr">&gt;</strong>
+            <span class="left"></span>
+            <span class="right"></span>
+            <em class="index"></em>
+        </div>
+    </div>
 
     <div id="screen"></div>
 
