add ajax to commit register form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="Baselib/tool.js"></script>
     <script type="text/javascript" src="Baselib/base.js"></script>
     <script type="text/javascript" src="Baselib/base_drag.js"></script>
+    <script type="text/javascript" src="Baselib/base_form.js"></script>
+    <script type="text/javascript" src="ajax.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
